# cube_slam_modified

./: .gitignore  CMakeLists.txt  CMakeLists.txt_bak  CMakeLists.txt_bak_1  README.md  build.sh  how_to_run.txt
Examples/: detect_2d_lines_3d_cuboid.cc  detect_3d_cuboid.cc  detect_lines.cc  detect_lines_3d_cuboid.cc  mono_kitti.cc  yolov8_detect_track.cc  yolov8_segment_track.cc
Examples/config/: KITTI00-02.yaml  KITTI00-02_me.yaml  KITTI_09_26.yaml  KITTI_10_03.yaml
YOLOv8/bytetrack_old/include/: BYTETracker.h  BytekalmanFilter.h  STrack.h
YOLOv8/bytetrack_old/src/: BYTETracker.cpp  BytekalmanFilter.cpp  STrack.cpp
detect_3d_cuboid/: CMakeLists.txt
detect_3d_cuboid/include/: detect_3d_cuboid.h  matrix_utils.h  object_3d_util.h
detect_3d_cuboid/src/: box_proposal_detail.cpp  matrix_utils.cpp  object_3d_util.cpp
detect_3d_cuboid_bak/: CMakeLists.txt
detect_3d_cuboid_bak/include/: detect_3d_cuboid.h  object_3d_util.h
detect_3d_cuboid_bak/src/: box_proposal_detail.cpp  matrix_utils.cpp  object_3d_util.cpp
line_lbd/: CMakeLists.txt
line_lbd/include/: line_descriptor.hpp  line_lbd_allclass.h  precomp.hpp
line_lbd/src/: binary_descriptor.cpp  line_lbd_allclass.cpp  lsd.cpp
object_slam/include/: Object_landmark.h  Tracking_frame.h  g2o_Object.h
object_slam/src/: object_slam.cc
orb_object_slam/: CMakeLists.txt
orb_object_slam/include/: Converter.h  Frame.h  FrameDrawer.h  KeyFrame.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapObject.h  MapPoint.h  ORBextractor.h  Optimizer.h  Parameters.h  PnPsolver.h  Sim3Solver.h  System.h  Tracking.h  Viewer.h  g2o_Object.h  g2o_Object_bak.h
orb_object_slam/src/: Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  LocalMapping.cc  LoopClosing.cc  MapDrawer.cc  MapObject.cc  ORBmatcher.cc  Optimizer.cc  Parameters.cpp  PnPsolver.cc  System.cc  Tracking.cc  Tracking_util.cc  Viewer.cc  g2o_Object.cpp  g2o_Object_bak.cpp
tools/: get_baseline_for_kitti.py  string2timestamp.py  yolo_seg.py
